@@ -4,6 +4,7 @@
   `add_handler`.
 * Automated nick permuting if chosen nick is already used.
 * `loggedin` and `runloop` pseudo events.
+* Own `username`, `hostname`, and `ircname` detection.
 
 == Changes for 0.0.2 - May 6, 2005
 
